--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -683,7 +683,7 @@
 			
 //			input标签获取焦点
             $('#wallet_addr').focus(function(e){
-            document.querySelector('#inputId').scrollIntoView();
+            document.querySelector('#wallet_addr').scrollIntoView();
             console.log("ccc")
             
         })
