--- a/application/index/view/index_qrcode.html
+++ b/application/index/view/index_qrcode.html
@@ -136,7 +136,7 @@
 			
 			<div id="qrcode" style="width:150px; height:150px;position: absolute;top: 0;left: 0;bottom: 0;right: 0;margin: auto;"></div>
 			
-			
+			<div>分享链接: <a style="color:floralwhite" href="#">{$data.url}</a> </div>
 			<!--背景样式-->
 
 			<img  id="pic" style="position: absolute;top: 0;left: 0;bottom: 0;right: 0;margin: auto;z-index: -1;" src="__PUBLIC__/images/qrcode/white.png" onerror="this.src='__PUBLIC__/images/qrcode/3.jpg'" />
