--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -679,12 +679,13 @@
 			
 			
 			
-//			input标签获取焦点
-            $('#wallet_addr').focus(function(e){
-            document.querySelector('#wallet_addr').scrollIntoView();
-            console.log("ccc")
-            
-        })
+//input标签获取焦点
+            $('#wallet_addr').click(function(){
+            	
+            	document.querySelector('#wallet_addr').scrollIntoView();
+            	
+            	
+            })
       
 
 			
