--- a/application/index/view/index_money.html
+++ b/application/index/view/index_money.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title>钱包余额</title>
+    <title>HTD</title>
     <script src="__PUBLIC__/js/public/rem.js"></script>
     <link rel="stylesheet" href="__PUBLIC__/css/public/swiper.css">
     <link rel="stylesheet" href="__PUBLIC__/css/public/base.css">
