--- a/application/index/view/index_tips.html
+++ b/application/index/view/index_tips.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title class="pageTopTitle" page-id="0">首页</title>
+    <title class="pageTopTitle" page-id="0">HTD</title>
     <script src="/public/js/rem.js"></script>
     <link rel="stylesheet" href="/public/css/reset.css">
     <link rel="stylesheet" href="/public/css/swiper.css">
