--- a/application/index/view/login_register.html
+++ b/application/index/view/login_register.html
@@ -3,7 +3,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>注册</title>
+		<title>HTD</title>
 		<script src="/public/js/rem.js"></script>
 		<link rel="stylesheet" href="__PUBLIC__css/reset.css">
 		<link rel="stylesheet" href="__PUBLIC__css/base.css" />
