--- a/application/index/view/wallet_addr.html
+++ b/application/index/view/wallet_addr.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<title class="pageTopTitle" page-id="1">钱包地址</title>
+	<title class="pageTopTitle" page-id="1">HTD</title>
 </head>
 <body>
 	<p>{$walletAddr}</p>
