--- a/application/index/view/index_directdrive.html
+++ b/application/index/view/index_directdrive.html
@@ -2,7 +2,7 @@
 <html>
   <head>
 	<meta charset="utf-8"> 
-    <title>直推</title>
+    <title>HTD</title>
     <!-- 包含头部信息用于适应不同设备 -->
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 包含 bootstrap 样式表 -->
