--- a/application/index/view/index_qrcode.html
+++ b/application/index/view/index_qrcode.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ko" lang="ko">
 
 	<head>
-		<title>分享</title>
+		<title>HTD</title>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		<script src="__PUBLIC__/js/public/rem.js"></script>
