--- a/application/index/view/login_index.html
+++ b/application/index/view/login_index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<title>登录</title>
+		<title>HTD</title>
 		<script src="__PUBLIC__/js/rem.js"></script>
 		<link rel="stylesheet" href="__PUBLIC__/css/reset.css?v=10">
 		<link rel="stylesheet" href="__PUBLIC__/css/base.css" />
