--- a/application/index/view/login_retrieve.html
+++ b/application/index/view/login_retrieve.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>找回密码</title>
+    <title>HTD</title>
     <script src="__PUBLIC__/js/public/rem.js"></script>
     <link rel="stylesheet" href="__PUBLIC__/css/public/reset.css">
     <link rel="stylesheet" href="__PUBLIC__/css/public/base.css"/>
