--- a/application/index/view/my_browser.html
+++ b/application/index/view/my_browser.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-    <title class="pageTopTitle" page-id="2">区块浏览器</title>
+    <title class="pageTopTitle" page-id="2">HTD</title>
     <script src="__PUBLIC__/js/public/rem.js"></script>
     <link rel="stylesheet" href="__PUBLIC__/css/public/reset.css">
     <link rel="stylesheet" href="__PUBLIC__/css/public/bottomNav.css" />
