--- a/application/index/view/my_up_id_card_new.html
+++ b/application/index/view/my_up_id_card_new.html
@@ -3,7 +3,7 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>上传身份证</title>
+		<title>HTD</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 		<script src="__PUBLIC__/js/public/rem.js"></script>
 		<link rel="stylesheet" href="__PUBLIC__/css/my/upIDCardNew.css?v=1552363666" />
