--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -682,10 +682,18 @@
 //input标签获取焦点
             $('#wallet_addr').click(function(){
             	
-            	document.querySelector('#wallet_addr').scrollIntoView();
+            	var target=this;
+            	console.log("ddd")
+            	setTimeout(function(){
+            		
+            		target.scrollIntoView(true)
+            		
+            		
+            	},100);
             	
             	
-            })
+            	
+            });
       
 
 			
