--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -682,15 +682,10 @@
 //input标签获取焦点
             $('#wallet_addr').click(function(){
             	
-            	var target=this;
-            	console.log("ddd")
-            	setTimeout(function(){
-            		
-            		target.scrollIntoView(true)
-            		
-            		
-            	},100);
             	
+            	
+               document.querySelector('#wallet_addr').scrollIntoView();
+               console.log("ddd")
             	
             	
             });
