--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -684,7 +684,7 @@
             	
             	
             	
-               document.querySelector('#wallet_addr').scrollIntoView();
+              document.getElementById("#wallet_addr").scrollIntoView();
                console.log("ddd")
             	
             	
