--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -684,7 +684,14 @@
             	
             	
             	
-              document.getElementById("#wallet_addr").scrollIntoView();
+//             document.getElementById("#wallet_addr").scrollIntoView(true);
+               
+               if (utils.deviceInfo().isAndroid) {
+                     setTimeout(function() {
+                  document.getElementById("#wallet_addr").scrollIntoViewIfNeeded(true);
+                  document.getElementById("#wallet_addr").scrollIntoView(true);
+                }, 500);
+                      }
                console.log("ddd")
             	
             	
