--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -144,7 +144,7 @@
 									</div>
 									<div class="lj_p_address">
 										<h2>验证码:</h2>
-										<input class="lj_input3" type="text" name="note"  />
+										<input class="lj_input3" type="text" name="verify"  />
 										<button class="btn" onclick="phonecode('{$phone}')">获取验证码</button>
 									</div>
 								</div>
@@ -467,14 +467,19 @@
 					}
 				}
 			});			
-		}	
+		};
+
+		var btn_true = true;
 		// 提币
 		layui.use(['layer','jquery','form'],function(){
 			var layer = layui.layer
 			, form = layui.form
 			,jq = layui.jquery;
 
-			jq('.true').click(function(){	 
+			jq('.true').click(function(){
+				
+				if(btn_true){
+
 					var verify = $('.lj_input3').val(); 
 					var val = $(".popover_click").attr("data-id") 
 					var val1 = $(".voting_click").attr("data-id") 
@@ -502,24 +507,28 @@
 					var datas =  $('#handleposition').serialize()+'&type='+val+'&verify='+verify+'&sms_type='+2;
 					jq.getJSON(url,datas,function(data){						
 							if (data.status == 1) {
-									// layer.msg(data.msg, {icon: 1, time: 2000}, function(){
-										console.log(data.result)	
-										$(".user").html(data.result['suc_name']);
-										$(".total").html(data.result['su_num']);
-										$(".charge").html(data.result['su_charge']);
-										$(".time").html(data.result['su_time']);
-										// $(".img").html(data.result['su_log']);
-										var su_img = "/"+data.result['su_log'];
-										console.log(su_img);
-										$(".su_img").attr("src",su_img);
-										// $(".time").html(Date('Y-m-d,H-s-i',data.result['su_time']))
-										$(".popover").hide();
-										$('.true_popUp_wrap').show();
+								btn_true = false;
+								// layer.msg(data.msg, {icon: 1, time: 2000}, function(){
+								console.log(data.result)	
+								$(".user").html(data.result['suc_name']);
+								$(".total").html(data.result['su_num']);
+								$(".charge").html(data.result['su_charge']);
+								$(".time").html(data.result['su_time']);
+								// $(".img").html(data.result['su_log']);
+								var su_img = "/"+data.result['su_log'];
+								console.log(su_img);
+								$(".su_img").attr("src",su_img);
+								// $(".time").html(Date('Y-m-d,H-s-i',data.result['su_time']))
+								$(".popover").hide();
+								$('.true_popUp_wrap').show();
 							}else {
-									layer.msg(data.msg);	
+								btn_true = true;
+								layer.msg(data.msg);
 							}
 						});
-
+				}else{
+					layer.msg('操作异常,稍后再试');	
+				}
 
 			});
 
@@ -657,62 +666,6 @@
 				}
 			}
 			
-<<<<<<< HEAD
-			/* 确认 */
-			// $('.popover_affirm .true').on('click', function() {
-				/*存储，base64*/
-				// var arrImgUrl = '';
-				// if($('.imageEchoBox .preViewImg').eq(0).attr('src').indexOf('base64') == -1 ) {
-				// 	console.log('请上传二维码！');
-				// 	/*对话框*/
-				// 	suredAlert($('body'),'请上传二维码！');
-				// 	return false;
-				// }
-				// arrImgUrl = $('.preViewImg').eq(0).attr('src');
-				// console.log(arrImgUrl);
-
-				// var arrImgUrl = '';
-				// if($('.imageEchoBox .preViewImg').eq(0).attr('src').indexOf('base64') == -1 ) {
-				// 	console.log('请上传二维码！');
-				// 	/*对话框*/
-				// 	suredAlert($('body'),'请上传二维码！');
-				// 	$('.popover').hide();
-				// 	return false;
-				// }
-				// arrImgUrl = $('.preViewImg').eq(0).attr('src');
-				// console.log(arrImgUrl);
-
-			// 	$('.popover').hide();
-			// })
-			/*000*/
-			
-			
-			
-			
-			
-//input标签获取焦点
-            $('#wallet_addr').click(function(){
-            	
-            	
-            	
-//             document.getElementById("#wallet_addr").scrollIntoView(true);
-               
-               if (utils.deviceInfo().isAndroid) {
-                     setTimeout(function() {
-                  document.getElementById("#wallet_addr").scrollIntoViewIfNeeded(true);
-                  document.getElementById("#wallet_addr").scrollIntoView(true);
-                }, 500);
-                      }
-               console.log("ddd")
-            	
-            	
-            });
-      
-
-			
-
-		</script>
-=======
 //			input标签获取焦点
             $('#wallet_addr').focus(function(e){
             document.querySelector('#inputId').scrollIntoView();
@@ -720,7 +673,6 @@
             
         });
 	</script>
->>>>>>> a2ad1af54e85b293c9df9914ad87993602f4d51b
 	</body>
 
 </html>
