--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -267,27 +267,27 @@
 		<script src="__PUBLIC__/plugins/layui/layui.js"></script>
 
 		<script>
-			function phonecode(phoneS){
-						var phone= {$phone};
-						var flag = true;
-						// 获取验证码
-						$.ajax({
-							url: '/index/index/getPhoneVerify',
-							type: 'post',
-							dataType: 'json',
-							data: {phone:phone, sms_type:2},
-							success:function(msg){
-								if(msg.code==0){
-									var flag = false;
-									layer.msg(msg.msg);
-									return false;
-								}
-							}
-						});
-						if(flag){
-							layer.msg('已发送');
-						}
-			}
+			// function phonecode(phoneS){
+			// 			var phone= {$phone};
+			// 			var flag = true;
+			// 			// 获取验证码
+			// 			$.ajax({
+			// 				url: '/index/index/getPhoneVerify',
+			// 				type: 'post',
+			// 				dataType: 'json',
+			// 				data: {phone:phone, sms_type:2},
+			// 				success:function(msg){
+			// 					if(msg.code==0){
+			// 						var flag = false;
+			// 						layer.msg(msg.msg);
+			// 						return false;
+			// 					}
+			// 				}
+			// 			});
+			// 			if(flag){
+			// 				layer.msg('已发送');
+			// 			}
+			// }
 
 			//复投按钮
 			function voting(uid,cu_id){
