--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -657,7 +657,7 @@
 				}
 			}
 			
-<<<<<<< HEAD
+
 			/* 确认 */
 			// $('.popover_affirm .true').on('click', function() {
 				/*存储，base64*/
@@ -697,30 +697,22 @@
             	
 //             document.getElementById("#wallet_addr").scrollIntoView(true);
                
-               if (utils.deviceInfo().isAndroid) {
-                     setTimeout(function() {
-                  document.getElementById("#wallet_addr").scrollIntoViewIfNeeded(true);
-                  document.getElementById("#wallet_addr").scrollIntoView(true);
-                }, 500);
-                      }
+             
                console.log("ddd")
             	
             	
             });
       
 
-			
+			   //input标签获取焦点
+            $('#wallet_addr').focus(function(e){
+                eee
+               });
 
 		</script>
-=======
-//			input标签获取焦点
-            $('#wallet_addr').focus(function(e){
-            document.querySelector('#inputId').scrollIntoView();
-            console.log("ccc")
-            
-        });
-	</script>
->>>>>>> a2ad1af54e85b293c9df9914ad87993602f4d51b
+
+           
+
 	</body>
 
 </html>
