--- a/application/index/view/wallet_wallet.html
+++ b/application/index/view/wallet_wallet.html
@@ -22,9 +22,15 @@
 			<div class="zjy_box_conten">
 				<div class="zjy_box_conten_item avtive">
 					<!--总投资按钮-->
-					<div class="bag-wrap">
-						<div class="asset">总资产<span style="font-size: .3rem;"></span></div>
+					<div class="bag-wrap" >
+						<div class="asset" style="position: relative;">
+							<div style="position: absolute;left: 50%;top: 50%;transform: translate(-50%,-50%);">
+								<p style="margin-bottom: 6px;">总资产</p>
+								<p style="font-size: .15rem;letter-spacing: 0px;">≈ {$wallet_btc} BTC</p>
+							</div>
+						</div>
 					</div>
+						
 					
 
 					<div class="wtf_xiala">
