--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -100,8 +100,8 @@
 										<ul class="ul_box popover_ul">
 											<!-- <li data-index="0">请选择</li> -->
 											<li data-index="1" onclick="getAll(1)">本金</li>
-											<li data-index="2" onclick="getRm()">收益</li>
-											<li data-index="3" onclick="getRm()">分红</li>
+											<li data-index="2">收益</li>
+											<li data-index="3">分红</li>
 										</ul>
 								</div>
 
