--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -341,7 +341,7 @@
 					$("#popover_num").removeAttr("disabled");
 					$('#popover_num').attr('placeholder', '大于等于{$withdraw_min}美金可提取')
 				} else {
-
+                    $('#popover_num').attr('placeholder', '大于等于{$global_min}美金可提取')
 				}
 			})
 			//复投下拉框-类型 
