--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -244,7 +244,7 @@
 							<!--000-->
 
 					</form>
-					<!-- <input type="hidden" name="cu_id" value="" id="getAll_id"/> -->
+					<input type="hidden" name="cu_id" value="" id="getAll_id"/>
 				</div>
 			</div>
 			<!-- 复投弹框-e -->
