--- a/application/admin/view/articles_add.html
+++ b/application/admin/view/articles_add.html
@@ -37,12 +37,12 @@
                  <!--</select>-->
                         <!--</div>-->
                     <!--</div>-->
-                    <div class="layui-col-md9">
-                        <label for="L_title" class="layui-form-label">标题</label>
-                        <div class="layui-input-block">
-                            <input type="text" id="L_title" name="title" required="" lay-verify="required" autocomplete="off" class="layui-input" />
-                        </div>
-                    </div>
+                    <!--<div class="layui-col-md9">-->
+                        <!--<label for="L_title" class="layui-form-label">标题</label>-->
+                        <!--<div class="layui-input-block">-->
+                            <!--<input type="text" id="L_title" name="title" required="" lay-verify="required" autocomplete="off" class="layui-input" />-->
+                        <!--</div>-->
+                    <!--</div>-->
                 </div>
                 <div class="layui-form-item">
 
