--- a/application/admin/view/articles_index.html
+++ b/application/admin/view/articles_index.html
@@ -75,7 +75,7 @@
                     <td align="center">{$vo.id}</td>
                     <td align="center">{$vo.title}</td>
                     <td align="center">
-                        {if $vo['open'] eq 0}<span style="padding:5px;color:#FFF;background:green">待审</span>{elseif $vo['open'] eq 1}正常 {elseif $vo['open'] eq 2}<span style="padding:5px;color:#FFF;background:red">不通过</span>{else /}<span style="padding:5px;color:#FFF;background:grey">隐藏</span>                        {/if}
+                        {if condition="$vo['open'] eq 1"}<a href="{:url('admin/articles/status',['id'=>$vo['id']])}">显示</a>{else /}<a href="{:url('admin/articles/status',['id'=>$vo['id']])}">隐藏</a>{/if}
                     </td>
                     <td align="center">
                         <input type="checkbox" lay-skin="switch" lay-text="置顶|置顶" lay-filter="switchsettop" value="{$vo['id']}" {php}echo $vo[ 'settop']==1 ? 'checked' : '';{/php}>
