qrcode头部文字偏下

--- a/application/index/view/index_qrcode.html
+++ b/application/index/view/index_qrcode.html
@@ -133,7 +133,7 @@
 	        
 			<input id="text" type="text" value="{$data.url}" style="width:80%;" hidden  /><br />
 			
-            <p style="padding-top: 2.7rem; width: 100%; text-align: center;font-size: .3rem;color: white;font-family:'微软雅黑';">我的推广二维码</p>
+            <p style="position:absolute;top:135px;width: 100%; text-align:center;font-size: .3rem;color: white;font-family:'微软雅黑';">我的推广二维码</p>
 			
 			
 			<div id="qrcode" style="width:150px; height:150px;position: absolute;top: 0;left: 0;bottom: 0;right: 0;margin: auto;"></div>
