--- a/public/css/home/present.css
+++ b/public/css/home/present.css
@@ -207,13 +207,12 @@
 	z-index: 1;
 	/* padding: 0.1rem 0 1.2rem 0; */
 	padding-top: 0.1rem; 
-
 	box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	width: 85%;
-	height: calc(100vh - 150px);
-	min-height:5rem;
+	/*height: calc(100vh - 150px);*/
+	height: 8rem;
 	color: #f5f5f5;
 	line-height: .75rem;
 	text-align: center;
