修改提币图片

--- a/application/index/view/index_present.html
+++ b/application/index/view/index_present.html
@@ -34,7 +34,7 @@
 						<!-- 商品名称 -->
 						<div class="currency_name" data-cu_id="{$v.cu_id}">
 							<div class="currency_name_text">
-								<img src="/{$v.log}"> {$v.name}
+								<img class="iconImgW" src="/{$v.log}"/> {$v.name}
 							</div>
 						</div>
 						<!-- 商品数量 -->
