--- a/public/css/home/present.css
+++ b/public/css/home/present.css
@@ -235,7 +235,7 @@
 	font-size: 0.28rem;
 	padding-left: 0.05rem;
 	background: transparent;
-	border-bottom: 1px solid #f5f5f5;
+	border-bottom: 0.01rem solid #f5f5f5;
 	color: #f5f5f5;
 }
 /* .lj_p_address{float: right;} */
@@ -270,7 +270,8 @@
 	float: left; */
 	width: 48%;
 	text-align: center;
-/* 	border: 1px solid #66cc; */
+/* 	border: 
+ solid #66cc; */
 	border-radius: 0.09rem;
 	margin-left: 0.2rem;
 	background: #224ddd;
@@ -322,7 +323,7 @@
 	font-size: 0.28rem;
 	padding-left: 0.05rem;
 	background: transparent;
-	border-bottom: 1px solid #f5f5f5;
+	border-bottom: 0.01rem solid #f5f5f5;
 	color: #f5f5f5;
 }
 
@@ -373,7 +374,7 @@
 .lj_p_address{position: relative;}
 .voting_box span,.popover_box span{display: inline-block}
 .voting_box ul,.popover_box ul {z-index: 1000; display: none;   width: 30%;position: absolute;left: 54%;background: #c4c4c4;border-radius: 0.09rem; }
-.voting_box ul li,.popover_box ul li{font-size: 0.3rem;color: #000;border-bottom: 1px solid #ffffff; }
+.voting_box ul li,.popover_box ul li{font-size: 0.3rem;color: #000;border-bottom: 0.01rem solid #ffffff; }
 .voting_box ul li:hover,.popover_box ul li:hover{background: #5a62af;color: #fff}
 .voting_box ul li:last-child,.popover_box ul li:last-child{border-bottom: none}
 
