--- a/public/css/home/present.css
+++ b/public/css/home/present.css
@@ -126,6 +126,10 @@
 	width: 2.8rem;
 	overflow: hidden;
 }
+.currency_name_text img{
+	width: .6rem;
+	height: .8rem;
+}
 .currency_num{
 	color: #f5f5f5;
 }
